updated converter links

--- a/index.html
+++ b/index.html
@@ -283,10 +283,11 @@ project is licensed under the <a rel="license" href="http://creativecommons.org/
 <h3>Converters</h3>
 <ul>
 	<li>Coptic encoding converter (converts older text character systems used for fonts such as Coptic and Laser Coptic into standards-compliant Coptic Unicode characters)
-	  <ul>
-		<li><a href="https://github.com/CopticScriptorium/Converters_perl/releases/latest" target="new">Simple recoding script in Perl</a> (supports CMCL, Laser Coptic and UTF-8 encoding conversion)</li>
-		<li><a href="https://github.com/CopticScriptorium/Converters/releases/latest" target="new">Converter for ASCII encoding / UTF-8</a> of Dirk Van Damme and Gregor Wurst</li>
-	</ul>
+      <ul>
+        <li>Simple recoding script in Perl (supports CMCL, Laser Coptic and UTF-8 encoding conversion)</li>
+        <li>Converter for ASCII encoding / UTF-8 of Dirk Van Damme and Gregor Wurst</li>
+        <li><a href="https://github.com/CopticScriptorium/converters/releases/latest" target="_blank">Download both converters</a></li>
+      </ul>
 	</li>
 	<li><a href="https://korpling.german.hu-berlin.de/p/projects/saltnpepper/wiki/" target="new">SaltNPepper</a> - a metamodel based Java framework for multi-format conversion </li>
   <li><a href="http://www.exmaralda.org/exceladdin.html">Excel-Plugin</a> for importing and exporting EXMARaLDA XML, SGML, PAULA XML and subsets of TEI XML</li>
@@ -300,8 +301,6 @@ project is licensed under the <a rel="license" href="http://creativecommons.org/
 		<li><a name="imageCredit" id="imageCredit"></a>The image on this page is a detail of <a href="http://corsair.themorgan.org/cgi-bin/Pwebrecon.cgi?SC=CallNumber&amp;SEQ=20140706123219&amp;PID=_ypu8IgXI8anIMTNU3GezV90EmX&amp;SA=MS+M.0581,+fol.+010r">MS M.0581, fol. 010r</a> at the Pierpont Morgan Library, available at <a href="http://corsair.morganlibrary.org/icaimages/5/m581.010ra.jpg" target="new">http://corsair.morganlibrary.org/icaimages/5/m581.010ra.jpg</a>, for non-commercial use only.</li>
 	</ul>
 	<p>The project is supported by the <a href="http://www.neh.gov" target="_blank">National Endowment for the Humanities</a> <a href="http://www.neh.gov/divisions/odh" target="_blank">Office of Digital Humanities</a> and <a href="http://www.neh.gov/divisions/preservation" target="_blank">Division of Preservation and Access</a>, the <a href="www.pacific.edu" target="blank">University of the Pacific</a>, and <a href="http://www.georgetown.edu" target="_blank">Georgetown University</a>. </p>
-	<p>Page last updated 12 October 2014</p>
-    </div>
-    
-    </body>
+	<p>Page last updated 13 October 2014</p>
+</body>
     </html>   
