minor index changes

--- a/index.html
+++ b/index.html
@@ -121,17 +121,17 @@ project is licensed under the <a rel="license" href="http://creativecommons.org/
 	<ul>
 		<li class="info"><a href="FAQ.html#A22" target="_blank">About the corpus</a></li>
 		<li class="search"><a href="http://corpling.uis.georgetown.edu/annis/scriptorium#_c=c2hlbm91dGUuYTIy" target="new">Search the corpus in ANNIS</a> (click <a href="FAQ.html#font" target="new">here</a> if the Coptic characters do not appear properly)</li>
-		<li><input class="dl" type="button" id="a22-dl1"/><label class="dl" for="a22-dl1">Download the latest stable release of the entire corpus in in PAULA XML, relANNIS, and TEI XML as zip file</label></li>
+		<li><a href="https://github.com/CopticScriptorium/corpora-legacy-releases" target="new"><input class="dl" type="button" id="a22-dl1"/><label class="dl" for="a22-dl1">Download the latest stable release of the entire corpus in in PAULA XML, relANNIS, and TEI XML as zip file</label></a></li>
 			</ul>
 		</li>
 		<!--<li>Metadata record (<a href="">LAUDATIO</a>)</li>-->
 
 	<li><input class="folder" type="checkbox" id="a22-top" /><label class="folder" for="a22-top">Individual documents in TEI XML as well as diplomatic and normalized versions in HTML:</label>
 		<ul>
-		  <!--<li><input class="doc" type="button" id="item-a22-1"/><label class="doc" for="item-a22-1">Shenoute.A22.YA421-28: download TEI XML, HTML: <a href="download/corpora/A22/Shenoute.A22.YA421-428_dipl.html" target="_blank">diplomatic</a>, <a href="download/corpora/A22/Shenoute.A22.YA421-428_norm.html" target="_blank">normalized</a></label></li>
+		  <li><input class="doc" type="button" id="item-a22-1"/><label class="doc" for="item-a22-1">Shenoute.A22.YA421-28: download TEI XML, HTML: <a href="download/corpora/A22/Shenoute.A22.YA421-428_dipl.html" target="_blank">diplomatic</a>, <a href="download/corpora/A22/Shenoute.A22.YA421-428_norm.html" target="_blank">normalized</a></label></li>
 				<li><input class="doc" type="button" id="item-a22-2"/><label class="doc" for="item-a22-2">Shenoute.A22.YA517-18: <a href="download/corpora/A22/Shenoute.A22.YA517-518_TEI.xml" target="_blank">download TEI XML</a>, HTML: <a href="download/corpora/A22/Shenoute.A22.YA517-518_dipl.html" target="_blank">diplomatic</a>, <a href="download/corpora/A22/Shenoute.A22.YA517-518_norm.html" target="_blank">normalized</a></label></li>
 		</ul>
-	</li>-->
+	</li>
 	</ul>
 	</div>
 	<h3>Abraham Our Father by Shenoute</h3>
@@ -139,14 +139,15 @@ project is licensed under the <a rel="license" href="http://creativecommons.org/
 	<ul>
 		<li class="info"><a href="FAQ.html#aof" target="new">About the corpus</a></li>
 		<li class="search"><a href="http://corpling.uis.georgetown.edu/annis/scriptorium#_c=c2hlbm91dGUuYWJyYWhhbS5vdXIuZmF0aGVy" target="new">Search the corpus in ANNIS</a> (click <a href="FAQ.html#font" target="new">here</a> if the Coptic characters do not appear properly)</li>
-		<li><input class="dl" type="button"  id="aof-dl"/><label class="dl" for="aof-dl">Download the latest stable release of the entire corpus in in PAULA XML, relANNIS, and TEI XML as zip file</label></label>
-			<ul>
+		<li><a href="https://github.com/CopticScriptorium/corpora-legacy-releases" target="new"><input class="dl" type="button"  id="aof-dl"/><label class="dl" for="aof-dl">Download the latest stable release of the entire corpus in in PAULA XML, relANNIS, and TEI XML as zip file (new TEI release coming soon)</label></label></a></li>
+			<!--<ul>
 			<li><input class="dl" type="button" id="aof-dl1"/><label class="dl" for="aof-dl1"><a href="download/corpora/AOF/abraham.our.father_PAULA.zip">PAULA XML</a></label></li>
-					<li><input class="dl" type="button" id="aof-dl2"/><label class="dl" for="aof-dl2"><a href="download/corpora/AOF/abraham.our.father_relANNIS.zip">relANNIS</a></label></li>
-			</ul>
+					<li><input class="dl" type="button" id="aof-dl2"/><label class="dl" for="aof-dl2"><a href="download/corpora/AOF/abraham.our.father_relANNIS.zip">relANNIS</a></label></li>>
+			</ul>-->
 		</li>
+        <br/>
 		<!--<li>Metadata record (<a href="">LAUDATIO</a>)</li>-->
-		<li><input class="folder" type="checkbox" id="aof-top" /><label class="folder" for="aof-top">Individual documents in TEI XML as well as diplomatic and normalized versions in HTML:</label>
+		<li><input class="folder" type="checkbox" id="aof-top" /><label class="folder" for="aof-top">Individual documents in TEI XML as well as diplomatic and normalized versions in HTML (update: new diplomatic & versions coming soon):</label>
 		<ul>
 			<li><input type="button" class="doc" id="aof-1"/><label class="doc" for="aof-1">Abraham.YA518-20:</label> <!--a href="download/corpora/AOF/Abraham.YA518-520_TEI.xml">download TEI XML</a-->, HTML: <a href="download/corpora/AOF/Abraham.YA518-20_dipl.html">diplomatic</a>, <a href="download/corpora/AOF/Abraham.YA518-20_norm.html">normalized</a>, <a href="download/corpora/AOF/Abraham.YA518-20_analytic.html">analytic</a> (part-of-speech analysis &amp; translation; <b>doesn't work in Firefox</b>)</li>
 			<li><input type="button" class="doc" id="aof-2"/><label class="doc" for="aof-2">Abraham.YA525-30:</label> <!--a href="download/corpora/AOF/Abraham.YA525-530_TEI.xml">download TEI XML</a-->, HTML: <a href="download/corpora/AOF/Abraham.YA525-30_dipl.html">diplomatic</a>, <a href="download/corpora/AOF/Abraham.YA525-30_norm.html">normalized</a>, <a href="download/corpora/AOF/Abraham.YA525-30_analytic.html">analytic</a> (part-of-speech analysis &amp; translation; <b>doesn't work in Firefox</b>)</li>
@@ -157,6 +158,7 @@ project is licensed under the <a rel="license" href="http://creativecommons.org/
 			<li><input type="button" class="doc" id="aof-7"/><label class="doc" for="aof-7">Abraham.XL93-94:</label> <!--a href="download/corpora/AOF/Abraham.XL93-94_TEI.xml">download TEI XML</a-->, HTML: <a href="download/corpora/AOF/Abraham.XL93-94_dipl.html">diplomatic</a>, <a href="download/corpora/AOF/Abraham.XL93-94_norm.html">normalized</a>, <a href="download/corpora/AOF/Abraham.XL93-94_analytic.html">analytic</a> (part-of-speech analysis &amp; translation; <b>doesn't work in Firefox</b>)</li>
 		</ul>
 	</li>
+    <br/>
 		<li><input type="button" class="doc" id="aof-chart"/><label class="doc" for="aof-chart">HTML <a href="AbrahamOurFatherParallels.html">chart of manuscript parallels</a></label></li>
 	</ul>
 	  </div>
@@ -168,7 +170,7 @@ project is licensed under the <a rel="license" href="http://creativecommons.org/
 	  <li class="info"><a href="FAQ.html#Besa" target="_blank">About the corpus</a></li>
 	  <li class="search"><a href="http://corpling.uis.georgetown.edu/annis/scriptorium#_c=YmVzYS5sZXR0ZXJz" target="_blank">Search the corpus in ANNIS</a> (click <a href="FAQ.html#font" target="new">here</a> if the Coptic characters do not appear properly)</li>
 		  <ul>
-          <li><input class="dl" type="button" id="besa-dl1"/><label class="dl" for="besa-dl1">Download the latest stable release of the entire corpus in in PAULA XML, relANNIS, and TEI XML as zip file</label></li>
+          <li><a href="https://github.com/CopticScriptorium/corpora-legacy-releases" target="new"><input class="dl" type="button" id="besa-dl1"/><label class="dl" for="besa-dl1">Download the latest stable release of the entire corpus in in PAULA XML, relANNIS, and TEI XML as zip file</label></a></li>
 		  </ul>
 	  <!--<li>Metadata record (<a href="">LAUDATIO</a>)</li>-->
 	  <li><input class="folder" type="checkbox" id="besa-top" /><label class="folder" for="besa-top">Individual documents in TEI XML as well as diplomatic, normalized, and analytic versions in HTML (analytic works in Chrome or Safari only):</label><br /><br />
@@ -186,7 +188,7 @@ project is licensed under the <a rel="license" href="http://creativecommons.org/
 	<ul>
 	  <li class="search">Search the corpus in <a href="http://corpling.uis.georgetown.edu/annis/scriptorium#_c=YXBvcGh0aGVnbWF0YS5wYXRydW0" target="_blank">ANNIS</a></li>
 		<ul>
-          <li><input class="dl" type="button" id="ap-dl"/><label class="dl" for="ap-dl">Download the latest stable release of the entire corpus in in PAULA XML, relANNIS, and TEI XML as zip file</label></li>
+          <li><a href="https://github.com/CopticScriptorium/corpora-legacy-releases" target="new"><input class="dl" type="button" id="ap-dl"/><label class="dl" for="ap-dl">Download the latest stable release of the entire corpus in in PAULA XML, relANNIS, and TEI XML as zip file</label></a></li>
 		</ul>
 		<!--<li>Metadata record (<a href="">LAUDATIO</a>)</li>-->
 		  <li><input class="folder" type="checkbox" id="ap-dl-top" /><label class="folder" for="ap-dl-top">Individual documents in TEI XML as well as diplomatic, normalized, and analytic versions in HTML (analytic works in Chrome or Safari only):</label><br /><br />
@@ -215,14 +217,14 @@ project is licensed under the <a rel="license" href="http://creativecommons.org/
 	<p>Note: This corpus is derived from the Sahidica New Testament, which was released by Warren Wells and made available for free electronic distributionfor academic use only.  It is not licensed CC-BY; <a href="http://coptic.pacific.edu/download/corpora/Mark/coptic_nt_sahidic.html" target="_blank">click here for Sahidica licensing information</a>.</p>
     <div class="css-treeview">
     <ul>
-    <li><input class="dl" type="button" id="mrk-dl"/><label class="dl" for="mrk-dl">Download the latest stable release of the entire corpus in in PAULA XML, relANNIS, and TEI XML as zip file</label></li>
+    <li><a href="https://github.com/CopticScriptorium/corpora-legacy-releases" target="new"><input class="dl" type="button" id="mrk-dl"/><label class="dl" for="mrk-dl">Download the latest stable release of the entire corpus in in PAULA XML, relANNIS, and TEI XML as zip file</label></a></li>
     </ul>
     <h4>Gospel of Mark</h4>
 	<ul>
 	  <li class="search">Search the corpus in <a href="http://corpling.uis.georgetown.edu/annis/scriptorium#_c=c2FoaWRpY2EubWFyaw&" target="_blank">ANNIS</a></li>
 			</li>
 <li><input class="folder" type="checkbox" id="mrk-top" />
-<label class="folder" for="mrk-top">Individual documents in TEI XML as well as  normalized version in HTML (analytic works in Chrome or Safari only):</label>
+<label class="folder" for="mrk-top">Individual documents in TEI XML as well as  normalized version in HTML (analytic coming soon!):</label>
 		<ul>
 		  <li><input type="button" class="doc" id="mrk-1"/><label class="doc" for="mrk-1">Chapter 1:</label> <a href="download/corpora/Mark/Mark1_TEI.xml" target="_blank">download TEI XML</a>, <a href="download/corpora/Mark/Sahidica.Mark1_chapter.html" target="_blank">HTML</a></li>
 		  <li><input type="button" class="doc" id="mrk-2"/><label class="doc" for="mrk-2">Chapter 2:</label> <a href="download/corpora/Mark/Mark2_TEI.xml" target="_blank">download TEI XML</a>, <a href="download/corpora/Mark/Sahidica.Mark2_chapter.html" target="_blank">HTML</a></li>
@@ -230,11 +232,11 @@ project is licensed under the <a rel="license" href="http://creativecommons.org/
 		  <li><input type="button" class="doc" id="mrk-4"/><label class="doc" for="mrk-4">Chapter 4:</label> <a href="download/corpora/Mark/Mark4_TEI.xml" target="_blank">download TEI XML</a>, <a href="download/corpora/Mark/Sahidica.Mark4_chapter.html" target="_blank">HTML</a></li>
 		  <li><input type="button" class="doc" id="mrk-5"/><label class="doc" for="mrk-5">Chapter 5:</label> <a href="download/corpora/Mark/Mark5_TEI.xml" target="_blank">download TEI XML</a>, <a href="download/corpora/Mark/Sahidica.Mark5_chapter.html" target="_blank">HTML</a></li>
 		  <li><input type="button" class="doc" id="mrk-6"/><label class="doc" for="mrk-6">Chapter 6:</label> <a href="download/corpora/Mark/Mark6_TEI.xml" target="_blank">download TEI XML</a>, <a href="download/corpora/Mark/Sahidica.Mark6_chapter.html" target="_blank">HTML</a></li>
-		  <li><input type="button" class="doc" id="mrk-12"/><label class="doc" for="mrk-12">Chapter 12:</label> <a href="download/corpora/Mark/Mark12_TEI.xml" target="_blank">download TEI XML</a>, <a href="download/corpora/Mark/Sahidica.Mark12_chapter.html" target="_blank">HTML</a></li>
+          <!--<li><input type="button" class="doc" id="mrk-12"/><label class="doc" for="mrk-12">Chapter 12:</label> <a href="download/corpora/Mark/Mark12_TEI.xml" target="_blank">download TEI XML</a>, <a href="download/corpora/Mark/Sahidica.Mark12_chapter.html" target="_blank">HTML</a></li>
 		  <li><input type="button" class="doc" id="mrk-13"/><label class="doc" for="mrk-13">Chapter 13:</label> <a href="download/corpora/Mark/Mark13_TEI.xml" target="_blank">download TEI XML</a>, <a href="download/corpora/Mark/Sahidica.Mark13_chapter.html" target="_blank">HTML</a></li>
 		  <li><input type="button" class="doc" id="mrk-14"/><label class="doc" for="mrk-14">Chapter 14:</label> <a href="download/corpora/Mark/Mark14_TEI.xml" target="_blank">download TEI XML</a>, <a href="download/corpora/Mark/Sahidica.Mark14_chapter.html" target="_blank">HTML</a></li>
           <li><input type="button" class="doc" id="mrk-15"/><label class="doc" for="mrk-15">Chapter 15:</label> <a href="download/corpora/Mark/Mark15_TEI.xml" target="_blank">download TEI XML</a>, <a href="download/corpora/Mark/Sahidica.Mark15_chapter.html" target="_blank">HTML</a></li>
-          <li><input type="button" class="doc" id="mrk-16"/><label class="doc" for="mrk-16">Chapter 16:</label> <a href="download/corpora/Mark/Mark16_TEI.xml" target="_blank">download TEI XML</a>, <a href="download/corpora/Mark/Sahidica.Mark16_chapter.html" target="_blank">HTML</a></li>
+          <li><input type="button" class="doc" id="mrk-16"/><label class="doc" for="mrk-16">Chapter 16:</label> <a href="download/corpora/Mark/Mark16_TEI.xml" target="_blank">download TEI XML</a>, <a href="download/corpora/Mark/Sahidica.Mark16_chapter.html" target="_blank">HTML</a></li>-->
         </ul>
 	</li>
 	</ul>
@@ -245,11 +247,12 @@ project is licensed under the <a rel="license" href="http://creativecommons.org/
 <li><input class="folder" type="checkbox" id="1cor-top" />
 <label class="folder" for="1cor-top">Individual documents in TEI XML as well as  normalized version in HTML (analytic works in Chrome or Safari only):</label>
 		<ul>
-		  <li><input type="button" class="doc" id="1cor-1"/><label class="doc" for="1cor-1">Chapter 1:</label> <a href="download/corpora/1Cor/1Cor1_TEI.xml" target="_blank">download TEI XML</a>, <a href="download/corpora/1Cor/Sahidica.1Cor1_chapter.html" target="_blank">HTML</a></li>
+        <li>Coming soon!</li>
+		 <!-- <li><input type="button" class="doc" id="1cor-1"/><label class="doc" for="1cor-1">Chapter 1:</label> <a href="download/corpora/1Cor/1Cor1_TEI.xml" target="_blank">download TEI XML</a>, <a href="download/corpora/1Cor/Sahidica.1Cor1_chapter.html" target="_blank">HTML</a></li>
           <li><input type="button" class="doc" id="1cor-2"/><label class="doc" for="1cor2">Chapter 2:</label> <a href="download/corpora/1Cor/1Cor2_TEI.xml" target="_blank">download TEI XML</a>, <a href="download/corpora/1Cor/Sahidica.1Cor2_chapter.html" target="_blank">HTML</a></li>
           <li><input type="button" class="doc" id="1cor-3"/><label class="doc" for="1cor3">Chapter 3:</label> <a href="download/corpora/1Cor/1Cor3_TEI.xml" target="_blank">download TEI XML</a>, <a href="download/corpora/1Cor/Sahidica.1Cor3_chapter.html" target="_blank">HTML</a></li>
 		  <li><input type="button" class="doc" id="1cor-4"/><label class="doc" for="1cor4">Chapter 4:</label> <a href="download/corpora/1Cor/1Cor4_TEI.xml" target="_blank">download TEI XML</a>, <a href="download/corpora/1Cor/Sahidica.1Cor4_chapter.html" target="_blank">HTML</a></li>
-          <li><input type="button" class="doc" id="1cor-5"/><label class="doc" for="1cor5">Chapter 5:</label> <a href="download/corpora/1Cor/1Cor5_TEI.xml" target="_blank">download TEI XML</a>, <a href="download/corpora/1Cor/Sahidica.1Cor5_chapter.html" target="_blank">HTML</a></li>
+          <li><input type="button" class="doc" id="1cor-5"/><label class="doc" for="1cor5">Chapter 5:</label> <a href="download/corpora/1Cor/1Cor5_TEI.xml" target="_blank">download TEI XML</a>, <a href="download/corpora/1Cor/Sahidica.1Cor5_chapter.html" target="_blank">HTML</a></li><-->
 </ul>
 
 </div>
@@ -301,6 +304,6 @@ project is licensed under the <a rel="license" href="http://creativecommons.org/
 		<li><a name="imageCredit" id="imageCredit"></a>The image on this page is a detail of <a href="http://corsair.themorgan.org/cgi-bin/Pwebrecon.cgi?SC=CallNumber&amp;SEQ=20140706123219&amp;PID=_ypu8IgXI8anIMTNU3GezV90EmX&amp;SA=MS+M.0581,+fol.+010r">MS M.0581, fol. 010r</a> at the Pierpont Morgan Library, available at <a href="http://corsair.morganlibrary.org/icaimages/5/m581.010ra.jpg" target="new">http://corsair.morganlibrary.org/icaimages/5/m581.010ra.jpg</a>, for non-commercial use only.</li>
 	</ul>
 	<p>The project is supported by the <a href="http://www.neh.gov" target="_blank">National Endowment for the Humanities</a> <a href="http://www.neh.gov/divisions/odh" target="_blank">Office of Digital Humanities</a> and <a href="http://www.neh.gov/divisions/preservation" target="_blank">Division of Preservation and Access</a>, the <a href="www.pacific.edu" target="blank">University of the Pacific</a>, and <a href="http://www.georgetown.edu" target="_blank">Georgetown University</a>. </p>
-	<p>Page last updated 13 October 2014</p>
+	<p>Page last updated 14 October 2014</p>
 </body>
     </html>   
