updated analytic viz

--- a/download/corpora/BL/Besa.letters.to_thieving_nuns_analytic.html
+++ b/download/corpora/BL/Besa.letters.to_thieving_nuns_analytic.html
@@ -22,8 +22,9 @@
 </head>
 
 <body>
-<!--October 12, 2014 by Caroline T. Schroeder-->
-<div class="v-panel-content v-panel-content-annis-wrapped-htmlvis-besa_letters v-panel-content-corpus-font-force v-scrollable" tabindex="-1" style="position: relative;"><div class="v-label v-widget htmlvis v-label-htmlvis v-label-undef-w"><span class="copt_word"><!--
+<!--October 17, 2014 by Caroline T. Schroeder-->
+<div class="v-panel-content v-panel-content-annis-wrapped-htmlvis-besa_letters v-panel-content-corpus-font-force v-scrollable" tabindex="-1" style="position: relative;">
+<div class="v-label v-widget htmlvis v-label-htmlvis v-label-undef-w"><span class="copt_word"><!--
 --><ruby class="norm"> </ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><p class="p" n="I.1"><!--
 --></p><div class="translation" trans="Oh you guilty on your part who allow Satan to come in,"><!--
 --><span class="copt_word"><!--
@@ -1206,7 +1207,7 @@
 --><rt class="pos" pos="NUM"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
 --><ruby class="norm">:<!--
 --><rt class="pos" pos="PUNCT"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --></div><!-- end of "translation" --><p></p><!-- end of "p" --><span class="copt_word"><!--
---><ruby class="norm"> </ruby><!-- end of "norm" --></span><!-- end of "copt_word" --></div></div>
+--><ruby class="norm"> </ruby><!-- end of "norm" --></span><!-- end of "copt_word" --></div>
 
 
 </div>
