HTML visualizations of A22

--- a/download/corpora/A22/Shenoute.A22.YA517-518_norm.html
+++ b/download/corpora/A22/Shenoute.A22.YA517-518_norm.html
@@ -8,11 +8,24 @@
 
 	<title>A22.YA517-518 - normalized</title>
 	<link rel="stylesheet" href="norm.css" type="text/css" charset="utf-8"/>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-55145025-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 
 </head>
 
 <body>
-<div class="v-slot v-slot-corpus-font"><div class="v-panel v-widget corpus-font v-panel-corpus-font v-has-width" style="overflow: hidden; width: 100%; padding-top: 1px; padding-bottom: 0px;"><div class="v-panel-captionwrap" style="margin-top: -1px;"><div class="v-panel-nocaption v-panel-nocaption-corpus-font"><span></span></div></div><div class="v-panel-content v-panel-content-corpus-font v-scrollable" tabindex="-1" style="position: relative;"><div class="v-label v-widget htmlvis v-label-htmlvis v-label-undef-w" style="display: inline-block;"><q class="page" page="YA517"><!--
+<div class="v-slot v-slot-corpus-font"><div class="v-panel v-widget corpus-font v-panel-corpus-font v-has-width" style="overflow: hidden; width: 100%; padding-top: 1px; padding-bottom: 0px;"><div class="v-panel-captionwrap" style="margin-top: -1px;"><div class="v-panel-nocaption v-panel-nocaption-corpus-font"><span></span></div></div><div class="v-panel-content v-panel-content-corpus-font v-scrollable" tabindex="-1" style="position: relative;">
+<!--October 19, 2014 by Caroline T. Schroeder-->
+
+<div class="v-label v-widget htmlvis v-label-htmlvis v-label-undef-w"><q class="page" page="YA517"><!--
 --><p><!--
 --><t class="translation" title="... pain ... very ..."><!--
 --><span class="word"><!--
@@ -136,6 +149,10 @@
 --><span class="norm">ⲛ</span><!-- end of "norm" --><span class="norm">ϩⲟⲥⲟⲛ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">ⲉ</span><!-- end of "norm" --><span class="norm">ⲛ</span><!-- end of "norm" --><span class="norm">ϣⲟⲟⲡ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">:</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
---><span class="norm">ⲻ</span><!-- end of "norm" --></span><!-- end of "word" --></q></t><!-- end of "translation" --></p><!-- end of "" --></q><!-- end of "page" --></div></div><div class="v-panel-deco v-panel-deco-corpus-font" style="margin-bottom: 0px;"></div></div></div>
+--><span class="norm">ⲻ</span><!-- end of "norm" --></span><!-- end of "word" --></q></t><!-- end of "translation" --></p><!-- end of "" --></q><!-- end of "page" --></div>
+
+
+
+<div class="v-panel-deco v-panel-deco-corpus-font" style="margin-bottom: 0px;"></div></div></div>
 </body>
 </html>
