--- a/download/corpora/A22/Shenoute.A22.YA517-518_dipl.html
+++ b/download/corpora/A22/Shenoute.A22.YA517-518_dipl.html
@@ -8,29 +8,42 @@
 
 	<title>Shenoute.A22.YA517-518 - diplomatic</title>
 	<link rel="stylesheet" href="dipl.css" type="text/css" charset="utf-8"/>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-55145025-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 
 </head>
 
 <body>
-<div class="v-slot v-slot-corpus-font"><div class="v-panel v-widget corpus-font v-panel-corpus-font v-has-width" style="overflow: hidden; width: 100%; padding-top: 1px; padding-bottom: 0px;"><div class="v-panel-captionwrap" style="margin-top: -1px;"><div class="v-panel-nocaption v-panel-nocaption-corpus-font"><span></span></div></div><div class="v-panel-content v-panel-content-corpus-font v-scrollable" tabindex="-1" style="position: relative;"><div class="v-label v-widget htmlvis v-label-htmlvis v-label-undef-w" style="display: inline-block;"><table class="pb" title="YA517"><!--
+<div class="v-slot v-slot-corpus-font"><div class="v-panel v-widget corpus-font v-panel-corpus-font v-has-width" style="overflow: hidden; width: 100%; padding-top: 1px; padding-bottom: 0px;"><div class="v-panel-captionwrap" style="margin-top: -1px;"><div class="v-panel-nocaption v-panel-nocaption-corpus-font"><span></span></div></div><div class="v-panel-content v-panel-content-corpus-font v-scrollable" tabindex="-1" style="position: relative;">
+<!--October 19, 2014 by Caroline T. Schroeder-->
+
+<div class="v-label v-widget htmlvis v-label-htmlvis v-label-undef-w"><table class="pb" title="YA517"><!--
 --><tbody><tr><td class="cb"><!--
 --><div class="line"><!--
 --><span>[…..]ⲉ̣ⲁ</span><!-- end of "" --><span>ⲙⲕⲁϩ</span><!-- end of "" --></div><!-- end of "line" --><div class="line"><!--
 --><span>[.....]</span><!-- end of "" --><span>ⲉⲙⲁⲧⲉ⳿</span><!-- end of "" --></div><!-- end of "line" --><div class="line"><!--
 --><span>[.....]ⲩⲟ</span><!-- end of "" --><span>ⲉ</span><!-- end of "" --><span>ⲙⲕⲁϩ</span><!-- end of "" --></div><!-- end of "line" --><div class="line"><!--
 --><span>[ⲛⲓ]ⲙ</span><!-- end of "" --><span>ⲉ</span><!-- end of "" --><span>ϥ</span><!-- end of "" --><span>ϩⲣⲁⲓ̈</span><!-- end of "" --><span>ϩⲓ</span><!-- end of "" --></div><!-- end of "line" --><div class="line"><!--
---><span>ϫⲱ</span><!-- end of "" --><hi_rend rend="2_space_right"><!--
---><span>ⲓ̈</span><!-- end of "" --></hi_rend><!-- end of "" --><hi_rend rend="1_space_right"><!--
---><span>·</span><!-- end of "" --></hi_rend><!-- end of "" --><span>ⲉⲧⲃⲉ</span><!-- end of "" --></div><!-- end of "line" --><div class="line"><!--
---><span>Ⲛ̣̄</span><!-- end of "" --><span>ϣⲉⲉⲣⲉ</span><!-- end of "" --><span>ⲇⲉ</span><!-- end of "" --><span>ϣⲏⲙ⳿</span><!-- end of "" --></div><!-- end of "line" --><div class="line"><!--
+--><span>ϫⲱ</span><!-- end of "" --><span>ⲓ̈<!--
+--><hi_rend rend="2_space_right"></hi_rend><!-- end of "" --></span><!-- end of "" --><span>·<!--
+--><hi_rend rend="1_space_right"></hi_rend><!-- end of "" --></span><!-- end of "" --><span>ⲉⲧⲃⲉ</span><!-- end of "" --></div><!-- end of "line" --><div class="line"><!--
+--><span>Ⲛ̣̄</span><!-- end of "" --><span>ϣⲉⲉⲣⲉ</span><!-- end of "" --><span>ⲇⲉ</span><!-- end of "" --><span>ϣⲏⲙ⳿</span><!-- end of "" --></div><!-- end of "line" --><div class="line"><!--
 --><span>ⲛ̄ⲧ</span><!-- end of "" --><span>ⲁ</span><!-- end of "" --><span>ⲛ</span><!-- end of "" --><span>ⲥⲱⲧ︤ⲙ︥</span><!-- end of "" --><span>ⲉ</span><!-- end of "" --></div><!-- end of "line" --><div class="line"><!--
---><span>ⲧⲃⲏⲏⲧ</span><!-- end of "" --><span>ⲟⲩ</span><!-- end of "" --><hi_rend rend="1_space_right"><!--
---><span>·</span><!-- end of "" --></hi_rend><!-- end of "" --><span>ϫⲉ</span><!-- end of "" --></div><!-- end of "line" --><div class="line"><!--
+--><span>ⲧⲃⲏⲏⲧ</span><!-- end of "" --><span>ⲟⲩ</span><!-- end of "" --><span>·<!--
+--><hi_rend rend="1_space_right"></hi_rend><!-- end of "" --></span><!-- end of "" --><span>ϫⲉ</span><!-- end of "" --></div><!-- end of "line" --><div class="line"><!--
 --><span>ⲥⲉ</span><!-- end of "" --><span>ⲛⲁ</span><!-- end of "" --><span>ⲡⲱⲧ⳿</span><!-- end of "" --><span>ⲉϩⲟⲩ⳯</span><!-- end of "" --></div><!-- end of "line" --><div class="line"><!--
 --><span>ⲉ</span><!-- end of "" --><span>ⲛⲉⲩ</span><!-- end of "" --><span>ⲉⲣⲏⲩ⳿</span><!-- end of "" --><span>ϩ︤ⲛ︥</span><!-- end of "" --></div><!-- end of "line" --><div class="line"><!--
 --><span>ⲟⲩⲱϣ</span><!-- end of "" --><span>ⲛ</span><!-- end of "" --><span>ⲥⲁⲣ</span><!-- end of "" --></div><!-- end of "line" --><div class="line"><!--
---><span>ⲕⲓⲕⲟⲛ</span><!-- end of "" --><hi_rend rend="1_space_right"><!--
---><span>·</span><!-- end of "" --></hi_rend><!-- end of "" --><span>ⲙⲁ</span><!-- end of "" --><span>ⲧⲁ</span><!-- end of "" --></div><!-- end of "line" --><div class="line"><!--
+--><span>ⲕⲓⲕⲟⲛ</span><!-- end of "" --><span>·<!--
+--><hi_rend rend="1_space_right"></hi_rend><!-- end of "" --></span><!-- end of "" --><span>ⲙⲁ</span><!-- end of "" --><span>ⲧⲁ</span><!-- end of "" --></div><!-- end of "line" --><div class="line"><!--
 --><span>ⲙⲟ</span><!-- end of "" --><span>ⲓ̈</span><!-- end of "" --><span>ⲉⲧⲃⲏⲏⲧ</span><!-- end of "" --><span>ⲟⲩ</span><!-- end of "" --></div><!-- end of "line" --><div class="line"><!--
 --><span>ϩ︤ⲛ︥</span><!-- end of "" --><span>ⲟⲩ</span><!-- end of "" --><span>ⲱⲣ︤ϫ︥⳿</span><!-- end of "" --><span>ϫⲉ</span><!-- end of "" --></div><!-- end of "line" --><div class="line"><!--
 --><span>ⲉⲓ̈ⲉ</span><!-- end of "" --><span>ⲉⲓⲙⲉ</span><!-- end of "" --></div><!-- end of "line" --><div class="line"><!--
@@ -51,9 +64,9 @@
 --><span>ⲃⲟⲗ</span><!-- end of "" --><span>ϩ︤ⲙ︥</span><!-- end of "" --><span>ⲡⲉⲓ̈</span><!-- end of "" --><span>ⲙⲁ</span><!-- end of "" --></div><!-- end of "line" --></td><!-- end of "cb" --><td class="cb"><!--
 --><div class="line"><!--
 --><span>ⲉ</span><!-- end of "" --><span>ⲡⲁⲓ̈</span><!-- end of "" --><span>ⲛ̣</span><!-- end of "" --><span>ϯ̣</span><!-- end of "" --><span>ⲛⲁ</span><!-- end of "" --><span>ⲣ̄</span><!-- end of "" --></div><!-- end of "line" --><div class="line"><!--
---><span>ϩⲱⲃ</span><!-- end of "" --><span>ⲁ[ⲛ̣]</span><!-- end of "" --><span>ⲉ</span><!-- end of "" --><span>ⲡ</span><!-- end of "" --><span>ϩ</span><hi_rend rend="omega under beta"><!--
---><span>ⲱ</span><!-- end of "" --></hi_rend><!-- end of "" --><hi_rend rend="superscript"><!--
---><span>ⲃ</span><!-- end of "" --></hi_rend><!-- end of "" --></div><!-- end of "line" --><div class="line"><!--
+--><span>ϩⲱⲃ</span><!-- end of "" --><span>ⲁ[ⲛ̣]</span><!-- end of "" --><span>ⲉ</span><!-- end of "" --><span>ⲡ</span><!-- end of "" --><span>ϩ</span><!-- end of "" --><span>ⲱ<!--
+--><hi_rend rend="omega under beta"></hi_rend><!-- end of "" --></span><!-- end of "" --><span>ⲃ<!--
+--><hi_rend rend="superscript"></hi_rend><!-- end of "" --></span><!-- end of "" --></div><!-- end of "line" --><div class="line"><!--
 --><span>ⲉ</span><!-- end of "" --><span>ϯ</span><!-- end of "" --><span>ⲣ̄</span><!-- end of "" --><span>ϩⲱⲃ</span><!-- end of "" --><span>ⲉⲣⲟ</span><!-- end of "" --><span>ϥ</span><!-- end of "" --><span>·</span><!-- end of "" --></div><!-- end of "line" --><div class="line"><!--
 --><span>ⲁⲩⲱ</span><!-- end of "" --><span>ⲉϣⲱⲡⲉ</span><!-- end of "" --></div><!-- end of "line" --><div class="line"><!--
 --><span>ⲙ̄ⲡ︤</span><!-- end of "" --><span>ⲥ︥</span><!-- end of "" --><span>ⲣ̄ϩⲛⲁ</span><!-- end of "" --><span>ⲥ⳿</span><!-- end of "" --><span>ⲛⲁ</span><!-- end of "" --></div><!-- end of "line" --><div class="line"><!--
@@ -61,8 +74,8 @@
 --><span>ⲟⲛ</span><!-- end of "" --><span>ⲉⲣⲟ</span><!-- end of "" --><span>ⲓ̈⳿</span><!-- end of "" --><span>ϯ</span><!-- end of "" --><span>ⲛⲁ</span><!-- end of "" --></div><!-- end of "line" --><div class="line"><!--
 --><span>ⲧⲥⲁⲃⲱ</span><!-- end of "" --><span>ⲧ︤ⲛ︥</span><!-- end of "" --><span>ⲉ</span><!-- end of "" --></div><!-- end of "line" --><div class="line"><!--
 --><span>ⲡ</span><!-- end of "" --><span>ⲉⲧ</span><!-- end of "" --><span>ⲉⲧ</span><!-- end of "" --><span>ⲛⲁ</span><!-- end of "" --><span>ⲁ</span><!-- end of "" --></div><!-- end of "line" --><div class="line"><!--
---><span>ⲁ</span><!-- end of "" --><span>ϥ⳿</span><!-- end of "" --><span>ⲛⲁ</span><!-- end of "" --><hi_rend rend="1_space_right"><!--
---><span>ⲥ</span><!-- end of "" --></hi_rend><!-- end of "" --><span>·</span><!-- end of "" --></div><!-- end of "line" --><div class="line"><!--
+--><span>ⲁ</span><!-- end of "" --><span>ϥ⳿</span><!-- end of "" --><span>ⲛⲁ</span><!-- end of "" --><span>ⲥ<!--
+--><hi_rend rend="1_space_right"></hi_rend><!-- end of "" --></span><!-- end of "" --><span>·</span><!-- end of "" --></div><!-- end of "line" --><div class="line"><!--
 --><span>Ⲛ̄ⲧⲱⲧ︤ⲛ︥</span><!-- end of "" --><span>ⲇⲉ</span><!-- end of "" --><span>ⲧⲏⲣ</span><!-- end of "" --></div><!-- end of "line" --><div class="line"><!--
 --><span>ⲧ︤ⲛ︥</span><!-- end of "" --><span>ⲉⲧⲉⲧ︤ⲛ︥</span><!-- end of "" --></div><!-- end of "line" --><div class="line"><!--
 --><span>ϣⲁⲛ</span><!-- end of "" --><span>ϩⲱⲡ⳿</span><!-- end of "" --><span>ⲉ</span><!-- end of "" --></div><!-- end of "line" --><div class="line"><!--
@@ -70,8 +83,8 @@
 --><span>ⲛ̄</span><!-- end of "" --><span>ⲕⲣⲟϥ</span><!-- end of "" --><span>ϩⲁ</span><!-- end of "" --><span>ⲧ︤ⲛ︥</span><!-- end of "" --></div><!-- end of "line" --><div class="line"><!--
 --><span>ⲧⲏⲩⲧ︤ⲛ︥</span><!-- end of "" --><span>ⲉ</span><!-- end of "" --><span>ⲧ︤ⲙ︥</span><!-- end of "" --></div><!-- end of "line" --><div class="line"><!--
 --><span>ⲧⲣⲉ</span><!-- end of "" --><span>ⲧ︤ⲛ︥</span><!-- end of "" --><span>ⲧⲁ</span><!-- end of "" --></div><!-- end of "line" --><div class="line"><!--
---><span>ⲙⲟ</span><!-- end of "" --><span>ⲛ⳿</span><!-- end of "" --><span>ⲉⲣⲟ</span><!-- end of "" --><hi_rend rend="1_space_right"><!--
---><span>ϥ</span><!-- end of "" --></hi_rend><!-- end of "" --><span>·</span><!-- end of "" --></div><!-- end of "line" --><div class="line"><!--
+--><span>ⲙⲟ</span><!-- end of "" --><span>ⲛ⳿</span><!-- end of "" --><span>ⲉⲣⲟ</span><!-- end of "" --><span>ϥ<!--
+--><hi_rend rend="1_space_right"></hi_rend><!-- end of "" --></span><!-- end of "" --><span>·</span><!-- end of "" --></div><!-- end of "line" --><div class="line"><!--
 --><span>ⲉ</span><!-- end of "" --><span>ⲧⲉⲧ︤ⲛ︥</span><!-- end of "" --><span>ⲧⲟⲩ</span><!-- end of "" --></div><!-- end of "line" --><div class="line"><!--
 --><span>ⲛⲟⲥ</span><!-- end of "" --><span>ⲙ̄</span><!-- end of "" --><span>ⲡ</span><!-- end of "" --><span>ⲥⲁⲧⲁ</span><!-- end of "" --></div><!-- end of "line" --><div class="line"><!--
 --><span>ⲛⲁⲥ⳿</span><!-- end of "" --><span>ⲉϩⲣⲁⲓ̈</span><!-- end of "" --><span>ⲉ</span><!-- end of "" --></div><!-- end of "line" --><div class="line"><!--
@@ -84,12 +97,15 @@
 --><span>ⲁⲧ</span><!-- end of "" --><span>ⲧⲏⲩⲧ︤ⲛ︥</span><!-- end of "" --><span>·</span><!-- end of "" --></div><!-- end of "line" --><div class="line"><!--
 --><span>ⲉⲓⲥ</span><!-- end of "" --><span>ⲡ</span><!-- end of "" --><span>ϩ̄ⲗ̄ⲗⲟ⳿</span><!-- end of "" --><span>ⲁ</span><!-- end of "" --><span>ⲓ̈</span><!-- end of "" --><span>ⲧ︤ⲛ︥</span><!-- end of "" --></div><!-- end of "line" --><div class="line"><!--
 --><span>ⲛⲟⲟⲩ</span><!-- end of "" --><span>ϥ</span><!-- end of "" --><span>ϣⲁⲣⲱ</span><!-- end of "" --></div><!-- end of "line" --><div class="line"><!--
---><span>ⲧ︤ⲛ︥</span><!-- end of "" --><span>ⲙ̄</span><!-- end of "" --><span>ⲡⲉⲓ</span><!-- end of "" --><span>ⲕⲉ</span><!-- end of "" --></div><!-- end of "line" --></td><!-- end of "cb" --></tr></tbody></table><!-- end of "pb" --><table class="pb" title="YA518"><!--
+--><span>ⲧ︤ⲛ︥</span><!-- end of "" --><span>ⲙ̄</span><!-- end of "" --><span>ⲡⲉⲓ</span><!-- end of "" --><span>ⲕⲉ</span><!-- end of "" --></div><!-- end of "line" --></td><!-- end of "cb" --></tr></tbody></table><!-- end of "pb" --><span><!--
+--><div class="line"><!--
+--></div></span><table class="pb" title="YA518"><!--
 --><tbody><tr><td class="cb"><!--
 --><div class="line"><!--
 --><span>ⲥⲟⲡ[.]</span><!-- end of "" --><span>ⲛ</span><!-- end of "" --><span>ϩⲟⲥⲟ⳯</span><!-- end of "" --></div><!-- end of "line" --><div class="line"><!--
---><span>ⲉ</span><!-- end of "" --><span>ⲛ</span><!-- end of "" --><span>ϣ[ⲟ]ⲟⲡ</span><!-- end of "" --><span>:</span><!-- end of "" --><span>ⲻ</span><!-- end of "" --></div><!-- end of "line" --></td><!-- end of "cb" --><td class="cb"><!--
---><div class="line"><!--
---><span></span><!-- end of "" --></div><!-- end of "line" --></td><!-- end of "cb" --></tr></tbody></table><!-- end of "pb" --></div></div><div class="v-panel-deco v-panel-deco-corpus-font" style="margin-bottom: 0px;"></div></div></div>
+--><span>ⲉ</span><!-- end of "" --><span>ⲛ</span><!-- end of "" --><span>ϣ[ⲟ]ⲟⲡ</span><!-- end of "" --><span>:</span><!-- end of "" --><span>ⲻ</span><!-- end of "" --></div><!-- end of "line" --></td><!-- end of "cb" --><td class="cb"></td><!-- end of "cb" --><!-- end of "line" --><!-- end of "" --></tr></tbody></table><!-- end of "pb" --><span></span><!-- end of "" --><span></span><!-- end of "" --><span></span><!-- end of "" --><span></span><!-- end of "" --></div>
+
+
+<div class="v-panel-deco v-panel-deco-corpus-font" style="margin-bottom: 0px;"></div></div></div>
 </body>
 </html>
