--- a/download/corpora/Mark/Sahidica.Mark12_analytic.html
+++ b/download/corpora/Mark/Sahidica.Mark12_analytic.html
@@ -24,6 +24,11 @@
 <body>
 <div class="v-slot v-slot-corpus-font"><div class="v-panel v-widget corpus-font v-panel-corpus-font v-has-width" style="overflow: hidden; width: 100%; padding-top: 1px; padding-bottom: 0px;"><div class="v-panel-captionwrap" style="margin-top: -1px;"><div class="v-panel-nocaption v-panel-nocaption-corpus-font"><span></span></div></div><div class="v-panel-content v-panel-content-corpus-font v-scrollable" tabindex="-1" style="position: relative;">
 <!--October 20, 2014 by Caroline T. Schroeder-->
+<br/>
+<br /><b>Note: Translation is the open access, open source World English Bible; it is not a direct translation of the Coptic.</b>
+<br/>
+<br />
+
 <div class="v-label v-widget htmlvis v-label-htmlvis v-label-undef-w"><div class="translation" trans="He began to speak to them in parables. 'A man planted a vineyard, put a hedge around it, dug a pit for the winepress, built a tower, rented it out to a farmer, and went into another country."><!--
 --><span class="copt_word"><!--
 --><ruby class="norm">ⲁⲩⲱ<!--
