--- a/download/corpora/Mark/Sahidica.Mark16_chapter.html
+++ b/download/corpora/Mark/Sahidica.Mark16_chapter.html
@@ -24,6 +24,11 @@
 <body>
 <div class="v-slot v-slot-corpus-font"><div class="v-panel v-widget corpus-font v-panel-corpus-font v-has-width" style="overflow: hidden; width: 100%; padding-top: 1px; padding-bottom: 0px;"><div class="v-panel-captionwrap" style="margin-top: -1px;"><div class="v-panel-nocaption v-panel-nocaption-corpus-font"><span></span></div></div><div class="v-panel-content v-panel-content-corpus-font v-scrollable" tabindex="-1" style="position: relative;">
 <!--October 20, 2014 by Caroline T. Schroeder-->
+<br/>
+<br /><b>Note: Translation is the open access, open source World English Bible; it is not a direct translation of the Coptic.</b>
+<br/>
+<br />
+
 <div class="v-label v-widget htmlvis v-label-htmlvis v-label-undef-w"><t class="translation" title="When the Sabbath was past, Mary Magdalene, and Mary the mother of James, and Salome, bought spices, that they might come and anoint him."><!--
 --><div class="verse" verse="1"><!--
 --><span class="word">ⲁⲩⲱ</span><!-- end of "word" --><span class="word">ⲛⲧⲉⲣⲉⲡⲥⲁⲃⲃⲁⲧⲟⲛ</span><!-- end of "word" --><span class="word">ⲟⲩⲉⲓⲛⲉ</span><!-- end of "word" --><span class="word">ⲙⲁⲣⲓⲁ</span><!-- end of "word" --><span class="word">ⲧⲙⲁⲅⲇⲁⲗⲏⲛⲏ</span><!-- end of "word" --><span class="word">ⲁⲩⲱ</span><!-- end of "word" --><span class="word">ⲙⲁⲣⲓⲁ</span><!-- end of "word" --><span class="word">ⲧⲁⲓⲁⲕⲱⲃⲟⲥ</span><!-- end of "word" --><span class="word">ⲙⲛⲥⲁⲗⲱⲙⲏ</span><!-- end of "word" --><span class="word">ⲁⲩϣⲉⲡϩⲉⲛϩⲏⲛⲉ</span><!-- end of "word" --><span class="word">ϫⲉⲕⲁⲁⲥ</span><!-- end of "word" --><span class="word">ⲉⲩⲉⲉⲓ</span><!-- end of "word" --><span class="word">ⲛⲥⲉⲧⲁϩⲥϥ</span><!-- end of "word" --></div><!-- end of "verse" --></t><!-- end of "translation" --><t class="translation" title="Very early on the first day of the week, they came to the tomb when the sun had risen."><!--
