--- a/download/corpora/1Cor/Sahidica.1Cor01_chapter.html
+++ b/download/corpora/1Cor/Sahidica.1Cor01_chapter.html
@@ -1,12 +1,30 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+
+
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Untitled Document</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+
+	<title>1 Corinthians 1 - chapter view</title>
+	<link rel="stylesheet" href="sahidica.css" type="text/css" charset="utf-8"/>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-55145025-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+
 </head>
 
-<body>
 
+<body>
+<div class="v-slot v-slot-corpus-font"><div class="v-panel v-widget corpus-font v-panel-corpus-font v-has-width" style="overflow: hidden; width: 100%; padding-top: 1px; padding-bottom: 0px;"><div class="v-panel-captionwrap" style="margin-top: -1px;"><div class="v-panel-nocaption v-panel-nocaption-corpus-font"><span></span></div></div><div class="v-panel-content v-panel-content-corpus-font v-scrollable" tabindex="-1" style="position: relative;">
+<!--October 25, 2014 by Caroline T. Schroeder-->
 
 <div class="v-label v-widget htmlvis v-label-htmlvis v-label-undef-w"><t class="translation" title="Paul, called to be an apostle of Jesus Christ through the will of God, and our brother Sosthenes,"><!--
 --><div class="verse" verse="1"><!--
