--- a/download/corpora/Mark/Sahidica.Mark13_chapter.html
+++ b/download/corpora/Mark/Sahidica.Mark13_chapter.html
@@ -24,6 +24,11 @@
 <body>
 <div class="v-slot v-slot-corpus-font"><div class="v-panel v-widget corpus-font v-panel-corpus-font v-has-width" style="overflow: hidden; width: 100%; padding-top: 1px; padding-bottom: 0px;"><div class="v-panel-captionwrap" style="margin-top: -1px;"><div class="v-panel-nocaption v-panel-nocaption-corpus-font"><span></span></div></div><div class="v-panel-content v-panel-content-corpus-font v-scrollable" tabindex="-1" style="position: relative;">
 <!--October 20, 2014 by Caroline T. Schroeder-->
+<br/>
+<br /><b>Note: Translation is the open access, open source World English Bible; it is not a direct translation of the Coptic.</b>
+<br/>
+<br />
+
 <div class="v-label v-widget htmlvis v-label-htmlvis v-label-undef-w"><t class="translation" title="As he went out of the temple, one of his disciples said to him, 'Teacher, see what kind of stones and what kind of buildings!'"><!--
 --><div class="verse" verse="Mark 13:1"><!--
 --><span class="word">ⲁⲩⲱ</span><!-- end of "word" --><span class="word">ⲉϥⲛⲏⲩ</span><!-- end of "word" --><span class="word">ⲉⲃⲟⲗ</span><!-- end of "word" --><span class="word">ϩⲙⲡⲉⲣⲡⲉ</span><!-- end of "word" --><span class="word">ⲡⲉϫⲉⲟⲩⲁ</span><!-- end of "word" --><span class="word">ⲛⲁϥ</span><!-- end of "word" --><span class="word">ⲉⲃⲟⲗ</span><!-- end of "word" --><span class="word">ϩⲛⲛⲉϥⲙⲁⲑⲏⲧⲏⲥ</span><!-- end of "word" --><span class="word">ϫⲉⲡⲥⲁϩ</span><!-- end of "word" --><span class="word">ⲁⲛⲁⲩ</span><!-- end of "word" --><span class="word">ⲉⲛⲉⲓⲱⲛⲉ</span><!-- end of "word" --><span class="word">ϫⲉϩⲉⲛⲁϣ</span><!-- end of "word" --><span class="word">ⲛϩⲉ</span><!-- end of "word" --><span class="word">ⲛⲉ</span><!-- end of "word" --><span class="word">.</span><!-- end of "word" --><span class="word">ⲙⲛ</span><!-- end of "word" --><span class="word">ⲛⲉⲓⲕⲉⲕⲱⲧ</span><!-- end of "word" --></div><!-- end of "verse" --></t><!-- end of "translation" --><t class="translation" title="Jesus said to him, 'Do you see these great buildings? There will not be left here one stone on another, which will not be thrown down.'"><!--
