--- a/download/corpora/Mark/Sahidica.Mark16_analytic.html
+++ b/download/corpora/Mark/Sahidica.Mark16_analytic.html
@@ -25,6 +25,12 @@
 <div class="v-slot v-slot-corpus-font"><div class="v-panel v-widget corpus-font v-panel-corpus-font v-has-width" style="overflow: hidden; width: 100%; padding-top: 1px; padding-bottom: 0px;"><div class="v-panel-captionwrap" style="margin-top: -1px;"><div class="v-panel-nocaption v-panel-nocaption-corpus-font"><span></span></div></div><div class="v-panel-content v-panel-content-corpus-font v-scrollable" tabindex="-1" style="position: relative;">
 <!--October 20, 2014 by Caroline T. Schroeder-->
 
+<br/>
+<br /><b>Note: Translation is the open access, open source World English Bible; it is not a direct translation of the Coptic.</b>
+<br/>
+<br />
+
+
 <div class="v-label v-widget htmlvis v-label-htmlvis v-label-undef-w"><div class="translation" trans="When the Sabbath was past, Mary Magdalene, and Mary the mother of James, and Salome, bought spices, that they might come and anoint him."><!--
 --><span class="copt_word"><!--
 --><ruby class="norm">ⲁⲩⲱ<!--
