--- a/download/corpora/Mark/Sahidica.Mark1_chapter.html
+++ b/download/corpora/Mark/Sahidica.Mark1_chapter.html
@@ -24,6 +24,11 @@
 <body>
 <div class="v-slot v-slot-corpus-font"><div class="v-panel v-widget corpus-font v-panel-corpus-font v-has-width" style="overflow: hidden; width: 100%; padding-top: 1px; padding-bottom: 0px;"><div class="v-panel-captionwrap" style="margin-top: -1px;"><div class="v-panel-nocaption v-panel-nocaption-corpus-font"><span></span></div></div><div class="v-panel-content v-panel-content-corpus-font v-scrollable" tabindex="-1" style="position: relative;">
 <!--October 20, 2014 by Caroline T. Schroeder-->
+<br/>
+<br /><b>Note: Translation is the open access, open source World English Bible; it is not a direct translation of the Coptic.</b>
+<br/>
+<br />
+
 <div class="v-label v-widget htmlvis v-label-htmlvis v-label-undef-w"><t class="translation" title="The beginning of the Good News of Jesus Christ, the Son of God."><!--
 --><div class="verse" verse="1"><!--
 --><span class="word">ⲧⲁⲣⲭⲏ</span><!-- end of "word" --><span class="word">ⲙⲡⲉⲩⲁⲅⲅⲉⲗⲓⲟⲛ</span><!-- end of "word" --><span class="word">ⲛⲓⲏⲥⲟⲩⲥ</span><!-- end of "word" --><span class="word">ⲡⲉⲭⲣⲓⲥⲧⲟⲥ</span><!-- end of "word" --><span class="word">[</span><!-- end of "word" --><span class="word">ⲡϣⲏⲣⲉ</span><!-- end of "word" --><span class="word">ⲙⲡⲛⲟⲩⲧⲉ</span><!-- end of "word" --><span class="word">]</span><!-- end of "word" --><span class="word">.</span><!-- end of "word" --></div><!-- end of "verse" --></t><!-- end of "translation" --><t class="translation" title="As it is written in the prophets, 'Behold, I send my messenger before your face, who will prepare your way before you."><!--
