--- a/download/corpora/Mark/Sahidica.Mark2_chapter.html
+++ b/download/corpora/Mark/Sahidica.Mark2_chapter.html
@@ -28,6 +28,11 @@
 
 <!--October 20, 2014 by Caroline T. Schroeder-->
 
+<br/>
+<br /><b>Note: Translation is the open access, open source World English Bible; it is not a direct translation of the Coptic.</b>
+<br/>
+<br />
+
 <div class="v-label v-widget htmlvis v-label-htmlvis v-label-undef-w"><t class="translation" title="When he entered again into Capernaum after some days, it was heard that he was in the house."><!--
 --><div class="verse" verse="1"><!--
 --><span class="word">ⲛⲧⲉⲣⲉϥⲃⲱⲕ</span><!-- end of "word" --><span class="word">ⲇⲉ</span><!-- end of "word" --><span class="word">ⲉϩⲟⲩⲛ</span><!-- end of "word" --><span class="word">ⲉⲕⲁⲫⲁⲣⲛⲁⲟⲩⲙ</span><!-- end of "word" --><span class="word">ϩⲓϫⲛ</span><!-- end of "word" --><span class="word">ϩⲉⲛϩⲟⲟⲩ</span><!-- end of "word" --><span class="word">ⲁⲩⲥⲱⲧⲙ</span><!-- end of "word" --><span class="word">ϫⲉϥϩⲛⲟⲩⲏⲉⲓ</span><!-- end of "word" --></div><!-- end of "verse" --></t><!-- end of "translation" --><t class="translation" title="Immediately many were gathered together, so that there was no more room, not even around the door; and he spoke the word to them."><!--
